assets/css/menu.css
/* -------------- *
 * General
 * -------------- */
* {
    margin: 0;
    padding: 0;
}
  
html {
    scroll-behavior: smooth;
}
  
body {
    overscroll-behavior: none;
    max-width: 1200px;
    margin: auto;
    background-color: #f8f9fa;
    position: relative;
}

body.no-scroll {
    overflow: hidden;
}

.black-overlay {
    display: none;
    position: fixed;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    background: rgba(0, 0, 0, 0.7);
    z-index: 1050;
}

.black-overlay.active {
    display: block;
}

.container {
    margin-left: auto;
    justify-content: center;
}

.row {
    justify-content: center;
}

.col-md-6 {
    padding: 10px;
    max-width: 450px;
}

/* -------------- *
 * Nav Bar
 * -------------- */
.navbar {
    padding-top: 10px;
    padding-bottom: 10px;
    width: 100%;
}

.navbar::after {
    content: "";
    height: 1px;
    background-color: gray;
    width: 97%;
    position: absolute;
    bottom: 0;
    left: 50%;
    transform: translateX(-50%);
}

.navbar-nav .nav-link {
    border-radius: 10px;
    padding: 8px 20px;
    font-size: 1.25rem;
    border: 2px solid transparent;
}

.navbar-nav .nav-link:hover {
    border: 2px solid grey;
    color: #333;
    cursor: pointer;
}

.navbar-nav .nav-item {
    margin-right: 10px;
}

.navbar-nav .nav-item:last-child {
    margin-right: 0;
}

.navbar-collapse {
    overflow-x: auto;
    white-space: nowrap;
}

.navbar-collapse::-webkit-scrollbar {
    display: none;
}

.navbar-nav .nav-link.active {
    background-color: #E0E0E0;
}

/* -------------- *
 * Search
 * -------------- */
.search-container {
    position: relative;
    margin-right: 20px;
}

.search-input {
    width: 0;
    height: 50px;
    padding: 0 20px;
    border-radius: 10px;
    border: 2px solid grey;
    transition: width 0.4s ease, opacity 0.4s ease;
    opacity: 0;
    pointer-events: none;
    font-size: 1.25rem;
}

.search-container.active .search-input {
    width: 200px;
    opacity: 1;
    pointer-events: auto;
    padding-left: 40px;
    padding-right: 30px;
}

.search-input:focus {
    outline: none;
}

.search-icon {
    color: rgba(0, 0, 0, 0.5);
    position: absolute;
    top: 50%;
    transform: translateY(-50%);
    cursor: pointer;
}

.search-icon i {
    padding: 12.5px;
    border-radius: 10px;
    border: 2px solid transparent;
    font-size: 1.5rem;
}

.search-icon i:hover {
    border: 2px solid grey;
    color: #333;
}

.search-container.active:hover .search-icon i:hover {
    border: 2px solid transparent;
}

/* -------------- *
 * Cuisine Filter
 * -------------- */
.dropdown-icon {
    position: absolute;
    top: 50%;
    right: 10px;
    transform: translateY(-50%);
    font-size: 1.5rem;
    color: rgba(0, 0, 0, 0.5);
    opacity: 0;
    pointer-events: none;
    transition: opacity 0.4s ease;
}

.search-container.active .dropdown-icon {
    opacity: 1;
    pointer-events: auto;
}

.dropdown-icon i:hover {
    color: #333;
    cursor: pointer;
}

/* Dropdown menu styles */
.dropdown-menu {
    position: absolute;
    top: 55px;
    right: 0;
    background: white;
    border: 1px solid grey;
    border-radius: 10px;
    padding: 10px;
    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
    display: none;
    flex-direction: column;
}

.dropdown-menu.active {
    display: flex;
}

.dropdown-menu label {
    display: block;
    margin-bottom: 5px;
    font-size: 1rem;
    cursor: pointer;
}

.dropdown-menu label:hover {
    background-color: #f0f0f0;
    color: #333;
    transition: all 0.3s ease;
}

.dropdown-menu label:last-child {
    margin-bottom: 0;
}

/* -------------- *
 * Cart Panel
 * -------------- */
.cart-container {
    margin-left: 10px;
    position: relative;
    cursor: pointer;
    border-radius: 10px;
    border: 2px solid transparent;
    padding-right: 3px;
}

.cart-container:hover {
    border: 2px solid grey;
    color: #333;
}

.cart-icon i {
    color: #808080;
    padding: 12.5px;
    font-size: 1.5rem;
}

#cart-count {
    position: absolute;
    top: 3px;
    right: 7px;
    color: white;
    font-size: 0.75rem;
    border-radius: 50%;
}

.cart-panel {
    position: fixed;
    top: 10px;
    right: -750px;
    width: 500px;
    height: calc(100% - 20px);
    background-color: white;
    border-radius: 10px;
    z-index: 1099;
    transition: right 0.3s ease-in-out;
    margin-right: 10px;
    display: flex;
    flex-direction: column;
}
  
.cart-panel.active {
    right: 0;
}
  
.cart-panel-header {
    padding: 20px;
    background-color: #f8f9fa;
    border-bottom: 1px solid #ddd;
    font-size: 1.25rem;
    font-weight: bold;
    border-radius: 10px;
}
  
.cart-panel-body {
    padding: 10px 20px;
    overflow-y: auto;
    flex-grow: 1;
}

.cart-panel-body::-webkit-scrollbar {
    display: none;
}
  
.cart-panel-footer {
    width: 100%;
    padding: 10px;
    background-color: #f8f9fa;
    border-top: 1px solid #ddd;
    border-radius: 10px;
}

.cart-panel-footer span {
    display: flex;
    justify-content: space-between;
    
}

.cart-panel-name, .cart-panel-note {
    padding-bottom: 5px;
}

label {
    margin: 0;
    display: flex;
}

.cart-panel-name label, .cart-panel-note label {
    font-size: 1.1rem;
}

.cart-panel-name input, .cart-panel-note input {
    width: 85%;
    font-size: 1.1rem;
    border: 2px solid #ddd;
    border-radius: 5px;
    background-color: #f8f9fa;
}
  
#cart-panel-submit {
    width: 100%;
    background-color: #e0e0e0;
    color: #b0b0b0;
    border: none;
    padding: 10px;
    font-size: 1.5rem;
    border-radius: 5px;
    cursor: pointer;
    pointer-events: none;
}

#cart-panel-submit.active {
    background-color: #28a745;
    color: white;
    pointer-events: initial;
}

#order-form {
    display: none;
}

/* -------------- *
 * Cart Item
 * -------------- */
.cart-item {
    display: flex;
    align-items: center;
    border-bottom: 1px solid #ccc;
    padding: 5px 0;
}

.cart-item-image {
    width: 80px;
    height: 80px;
    margin-right: 15px;
    border-radius: 10px;
}

.cart-item-details {
    flex-grow: 1;
}

.cart-item-quantity {
    display: flex;
}

.cart-item-quantity button {
    width: 30px;
    height: 30px;
    border: 1px solid #ddd;
    border-radius: 5px;
    font-size: 1.25rem;
    cursor: pointer;
    display: flex;
    align-items: center;
    justify-content: center;
}

.cart-item-quantity button:hover {
    background-color: #e9ecef;
}

.cart-item-quantity span {
    font-size: 1.25rem;
    font-weight: bold;
    min-width: 30px;
    text-align: center;
}

.cart-item-price h5 {
    display: flex;
    justify-content: right;
}

.original-price {
    text-decoration: line-through;
    color: #999;
}

.discounted-price {
    color: green;
    font-weight: bold;
}

/* -------------- *
 * Categories
 * -------------- */
 .category {
    padding-bottom: 24px;
}

.category:first-child {
    padding-top: 12px;
}

.category h2 {
    font-weight: bold;
    color: #333;
    text-transform: capitalize;
}

.card {
    display: flex;
    flex-direction: row;
    border: 1px solid #ddd;
    border-radius: 5px;
    height: 175px;
    overflow: hidden;
    transition: transform 0.3s ease, box-shadow 0.3s ease;
    cursor: pointer;
}

.card:hover {
    transform: scale(1.01);
    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
}

.card-top {
    position: absolute;
    top: 5px;
    right: 5px;
    z-index: 10;
}

.fav-icon {
    color: gold;
    font-size: 1.25rem;
}

.card-img {
    width: 40%;
    height: 100%;
    border-right: 1px solid #ddd;
}

.card-body {
    padding: 15px;
    flex-grow: 1;
    overflow: hidden;
}

.card-title {
    font-size: 1.2rem;
    font-weight: bold;
}

.card-text {
    font-size: 0.9rem;
}

/* -------------- *
 * Food Panel
 * -------------- */
.food-panel {
    position: fixed;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    height: calc(100% - 100px);
    background-color: white;
    width: 600px;
    border-radius: 10px;
    z-index: 1100;
    opacity: 0;
    visibility: hidden;
    display: flex;
    flex-direction: column;
}

.food-panel.active {
    opacity: 1;
    visibility: visible;
    transition: opacity 0.4s ease, visibility 0s ease 0s;
}

.food-panel-body .close {
    position: absolute;
    top: 15px;
    right: 15px;
    z-index: 1101;
    padding: 5px;
    background-color: white;
    border-radius: 100%;
    
}

.food-panel-body {
    overflow-y: auto;
    flex-grow: 1;
    border-radius: 10px;
}

.food-panel-body::-webkit-scrollbar {
    display: none;
}

.food-panel-body img {
    width: 100%;
    height: 60%;
    border-radius: 10px;
}

#food-name {
    position: sticky;
    top: 0;
    width: 100%;
    padding: 10px 20px;
    background: white;
}

#food-name::after {
    content: "";
    display: block;
    height: 1px;
    background-color: gray;
    width: 99%; 
    margin-top: 10px;
}
  
.food-desc {
    padding: 0 20px;
}

#food-price {
    display: none;
}

.food-panel-footer {
    display: flex;
    width: 100%;
    padding: 10px;
    background-color: #f8f9fa;
    border-top: 1px solid #ddd;
    justify-content: space-between;
    border-radius: 10px;
}
  
#step-counter, #food-add  {
    font-weight: bold;
    border-radius: 10px;
    justify-content: space-between;
    padding: 10px;
}

#step-counter {
    display: flex;
    color: rgba(0, 0, 0, 0.5);
    background-color: white;
    width: 30%;
    border: 1px solid gray;
}

#minus-btn, #plus-btn {
    cursor: pointer;
    transition: transform 0.2s ease;
}

#minus-btn:hover, #plus-btn:hover {
    transform: scale(1.2);
}

#food-add {
    display: flex;
    width: 65%;
    background-color: #28a745;
    color: white;
    cursor: pointer;
    justify-content: space-between;
}

#food-add:hover {
    background-color: #218838;
}

/* -------------- *
 * Footer
 * -------------- */
.footer {
    padding: 20px;
}

/* -------------- *
 * Nav Bar Wide
 * -------------- */
@media (min-width: 1200px) {
    .navbar {
        position: fixed;
        align-items: flex-start;
        width: 230px;
        height: 100%;
        padding: 11.5px 0px;
        overflow-y: auto;
    }

    .navbar::after {
        display: none;
    }

    .navbar::-webkit-scrollbar {
        display: none;
    }

    .navbar-expand .navbar-collapse {
        display: block !important;
    }

    .navbar-expand .navbar-nav {
        flex-direction: column;
    }

    .navbar-nav .nav-item {
        margin-right: 0px;
    }

    .navbar-expand .navbar-nav .nav-link {
        padding: 8px 20px;
    }

    .navbar-expand .container-fluid {
        padding: 0px 16px;
        flex-wrap: wrap;
    }
      
    .container {
        margin-left: 255px;
    }

    .search-container {
        margin-right: 0px;
        margin-bottom: 10px;
    }

    .search-input {
        padding-left: 40px;
        padding-right: 10px;
        transition: none;
    }

    .search-icon {
        pointer-events: none;
    }

    .search-container .search-input, .search-container.active .search-input {
        width: 200px;
        opacity: 1;
        pointer-events: auto;
    }

    .dropdown-icon {
        opacity: 1;
        pointer-events: auto;
    }

    .cart-container {
        position: fixed;
        left: 1115px;
        top: -10px;
        background-color: white;
        border: 1px solid black;
        padding-top: 21px;
    }

    #cart-count {
        position: absolute;
        top: 24px;
    }

    .row {
        justify-content: initial;
    }
}

@media (max-width: 991.98px) {
    .card {
        height: 150px;
    }
}

@media (max-width: 767.98px) {
    .row {
        max-width: 450px;
    }

    .wrap-text {
        display: block;
    }

    .cart-panel, .food-panel {
        width: 80%;
    }
}

